[package]
name = "agreeter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11.8"
greetd_ipc = "0.10.3"
rpassword = "7.4.0"
tokio = { version = "1.45.0", features = ["full"] }
wayland-client = "0.31.8"
wayland-protocols-wlr = "0.3.6"
zbus = "5.7.0"
